--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,5 @@
-fyba (4.1.0-2) unstable; urgency=low
+fyba (4.1.0-1) unstable; urgency=low
 
-  * Cleaned up so that it builds with no errors 
+  * Initial release (Closes: #12345)
 
- -- Ruben Undheim <ruben.undheim@gmail.com>  Mon, 07 Jul 2014 15:05:05 +0200
-
-libfyba (4.1.0-1) unstable; urgency=low
-
-  * Initial release (Closes: #nnnn)  <nnnn is the bug number of your ITP>
-
- -- Anders Einar Hilden <hildenae@gmail.com>  Wed, 09 Oct 2013 22:14:07 +0200
+ -- Ruben Undheim <ruben.undheim@gmail.com>  Thu, 04 Sep 2014 21:41:19 +0200
