--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+fyba (4.1.1-1) unstable; urgency=low
+
+  * Upgraded fyba to version 4.1.1
+
+ --  Gnonthgol <gnonthgol@gmail.com>  Wed, 19 Sep 2018 13:15:11 +0000
+
 fyba (4.1.0-1) unstable; urgency=low
 
   * Initial release (Closes: #760544)
